--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
  <div class="banner-content">
     <div class="logo-container">
       <a href="index.html" class="home-link">
-        <img src="images/Headshot.jpg" alt="Simple Salesman Logo" class="site-logo">
+        <img src="Headshot.jpg" alt="Simple Salesman Logo" class="site-logo">
         <h1 class="logo">Houston Auto Pro</h1>
       </a>
     </div>
