--- a/index.html
+++ b/index.html
@@ -36,15 +36,15 @@
     <h2>Featured Vehicles</h2>
     <div class="gallery-grid">
       <div class="gallery-item">
-        <img src="C:\Users\ShAllan\Documents\shawns site\images\F150Raptor.jpg" alt="Ford F-150" class="vehicle-img">
+        <img src="F150Raptor.jpg" alt="Ford F-150" class="vehicle-img">
         <p class="vehicle-caption">Ford F-150</p>
       </div>
       <div class="gallery-item">
-        <img src="C:\Users\ShAllan\Documents\shawns site\images\MustangDarkhorse.avif" alt="Ford Mustang" class="vehicle-img mustang-img">
+        <img src="MustangDarkhorse.avif" alt="Ford Mustang" class="vehicle-img mustang-img">
         <p class="vehicle-caption">Ford Mustang</p>
       </div>
       <div class="gallery-item">
-        <img src="C:\Users\ShAllan\Documents\shawns site\images\FordExplorer.png" alt="Ford Explorer" class="vehicle-img">
+        <img src="FordExplorer.png" alt="Ford Explorer" class="vehicle-img">
         <p class="vehicle-caption">Ford Explorer</p>
       </div>
     </div>
@@ -55,7 +55,7 @@
     <div class="mission-content">
       <h2>Making Car Buying Simple</h2>
       <p>
-        At <strong>Simple Salesman</strong>, my goal is to make car buying simple, transparent, and stress-free. I value your trust and appreciate the opportunity to earn your business by providing honest advice, competitive pricing, and a seamless experience. Let’s find the perfect car for you—without the hassle.
+        At <strong>Houston Auto Pro</strong>, my goal is to make car buying simple, transparent, and stress-free. I value your trust and appreciate the opportunity to earn your business by providing honest advice, competitive pricing, and a seamless experience. Let’s find the perfect car for you—without the hassle.
 
       </p>
       <a href="contact.html" class="cta-button">Get Started Today</a>
