--- a/Happy-customers.html
+++ b/Happy-customers.html
@@ -89,94 +89,18 @@
 <script>
     // Customer image data - replace with your actual image paths
     const customerImages = [
-        "C:\\Users\\ShAllan\\Documents\\shawns site\\images\\Customers\\Customer1.jpg",
-        "C:\\Users\\ShAllan\\Documents\\shawns site\\images\\Customers\\Customer2.jpg",
-        "C:\\Users\\ShAllan\\Documents\\shawns site\\images\\Customers\\Customer3.jpg",
-        "C:\\Users\\ShAllan\\Documents\\shawns site\\images\\Customers\\Customer4.jpg",
-        "C:\\Users\\ShAllan\\Documents\\shawns site\\images\\Customers\\Customer5.jpg",
-        "C:\\Users\\ShAllan\\Documents\\shawns site\\images\\Customers\\Customer6.jpg",
-        "C:\\Users\\ShAllan\\Documents\\shawns site\\images\\Customers\\Customer7.jpg",
-        "C:\\Users\\ShAllan\\Documents\\shawns site\\images\\Customers\\Customer8.jpg",
-        "C:\\Users\\ShAllan\\Documents\\shawns site\\images\\Customers\\Customer9.jpg",
-        "C:\\Users\\ShAllan\\Documents\\shawns site\\images\\Customers\\Customer10.jpg",
-        "C:\\Users\\ShAllan\\Documents\\shawns site\\images\\Customers\\Customer11.jpg",
-        "C:\\Users\\ShAllan\\Documents\\shawns site\\images\\Customers\\Customer12.jpg",
-        "C:\\Users\\ShAllan\\Documents\\shawns site\\images\\Customers\\Customer13.jpg",
-        "C:\\Users\\ShAllan\\Documents\\shawns site\\images\\Customers\\Customer14.jpg",
-        "C:\\Users\\ShAllan\\Documents\\shawns site\\images\\Customers\\Customer15.jpg",
-        "C:\\Users\\ShAllan\\Documents\\shawns site\\images\\Customers\\Customer16.jpg",
-        "C:\\Users\\ShAllan\\Documents\\shawns site\\images\\Customers\\Customer17.jpg",
-        "C:\\Users\\ShAllan\\Documents\\shawns site\\images\\Customers\\Customer18.jpg",
-        "C:\\Users\\ShAllan\\Documents\\shawns site\\images\\Customers\\Customer19.jpg",
-        "C:\\Users\\ShAllan\\Documents\\shawns site\\images\\Customers\\Customer20.jpg",
-        "C:\\Users\\ShAllan\\Documents\\shawns site\\images\\Customers\\Customer21.jpg",
-        "C:\\Users\\ShAllan\\Documents\\shawns site\\images\\Customers\\Customer22.jpg",
-        "C:\\Users\\ShAllan\\Documents\\shawns site\\images\\Customers\\Customer23.jpg",
-        "C:\\Users\\ShAllan\\Documents\\shawns site\\images\\Customers\\Customer24.jpg",
-        "C:\\Users\\ShAllan\\Documents\\shawns site\\images\\Customers\\Customer25.jpg",
-        "C:\\Users\\ShAllan\\Documents\\shawns site\\images\\Customers\\Customer26.jpg",
-        "C:\\Users\\ShAllan\\Documents\\shawns site\\images\\Customers\\Customer27.jpg",
-        "C:\\Users\\ShAllan\\Documents\\shawns site\\images\\Customers\\Customer28.jpg",
-        "C:\\Users\\ShAllan\\Documents\\shawns site\\images\\Customers\\Customer29.jpg",
-        "C:\\Users\\ShAllan\\Documents\\shawns site\\images\\Customers\\Customer30.jpg",
-        "C:\\Users\\ShAllan\\Documents\\shawns site\\images\\Customers\\Customer31.jpg",
-        "C:\\Users\\ShAllan\\Documents\\shawns site\\images\\Customers\\Customer32.jpg",
-        "C:\\Users\\ShAllan\\Documents\\shawns site\\images\\Customers\\Customer33.jpg",
-        "C:\\Users\\ShAllan\\Documents\\shawns site\\images\\Customers\\Customer34.jpg",
-        "C:\\Users\\ShAllan\\Documents\\shawns site\\images\\Customers\\Customer35.jpg",
-        "C:\\Users\\ShAllan\\Documents\\shawns site\\images\\Customers\\Customer36.jpg",
-        "C:\\Users\\ShAllan\\Documents\\shawns site\\images\\Customers\\Customer37.jpg",
-        "C:\\Users\\ShAllan\\Documents\\shawns site\\images\\Customers\\Customer38.jpg",
-        "C:\\Users\\ShAllan\\Documents\\shawns site\\images\\Customers\\Customer39.jpg",
-        "C:\\Users\\ShAllan\\Documents\\shawns site\\images\\Customers\\Customer40.jpg",
-        "C:\\Users\\ShAllan\\Documents\\shawns site\\images\\Customers\\Customer41.jpg",
-        "C:\\Users\\ShAllan\\Documents\\shawns site\\images\\Customers\\Customer42.jpg",
-        "C:\\Users\\ShAllan\\Documents\\shawns site\\images\\Customers\\Customer43.jpg",
-        "C:\\Users\\ShAllan\\Documents\\shawns site\\images\\Customers\\Customer44.jpg",
-        "C:\\Users\\ShAllan\\Documents\\shawns site\\images\\Customers\\Customer45.jpg",
-        "C:\\Users\\ShAllan\\Documents\\shawns site\\images\\Customers\\Customer46.jpg",
-        "C:\\Users\\ShAllan\\Documents\\shawns site\\images\\Customers\\Customer47.jpg",
-        "C:\\Users\\ShAllan\\Documents\\shawns site\\images\\Customers\\Customer48.jpg",
-        "C:\\Users\\ShAllan\\Documents\\shawns site\\images\\Customers\\Customer49.jpg",
-        "C:\\Users\\ShAllan\\Documents\\shawns site\\images\\Customers\\Customer50.jpg",
-        "C:\\Users\\ShAllan\\Documents\\shawns site\\images\\Customers\\Customer51.jpg",
-        "C:\\Users\\ShAllan\\Documents\\shawns site\\images\\Customers\\Customer52.jpg",
-        "C:\\Users\\ShAllan\\Documents\\shawns site\\images\\Customers\\Customer53.jpg",
-        "C:\\Users\\ShAllan\\Documents\\shawns site\\images\\Customers\\Customer54.jpg",
-        "C:\\Users\\ShAllan\\Documents\\shawns site\\images\\Customers\\Customer55.jpg",
-        "C:\\Users\\ShAllan\\Documents\\shawns site\\images\\Customers\\Customer56.jpg",
-        "C:\\Users\\ShAllan\\Documents\\shawns site\\images\\Customers\\Customer57.jpg",
-        "C:\\Users\\ShAllan\\Documents\\shawns site\\images\\Customers\\Customer58.jpg",
-        "C:\\Users\\ShAllan\\Documents\\shawns site\\images\\Customers\\Customer59.jpg",
-        "C:\\Users\\ShAllan\\Documents\\shawns site\\images\\Customers\\Customer60.jpg",
-        "C:\\Users\\ShAllan\\Documents\\shawns site\\images\\Customers\\Customer61.jpg",
-        "C:\\Users\\ShAllan\\Documents\\shawns site\\images\\Customers\\Customer62.jpg",
-        "C:\\Users\\ShAllan\\Documents\\shawns site\\images\\Customers\\Customer63.jpg",
-        "C:\\Users\\ShAllan\\Documents\\shawns site\\images\\Customers\\Customer64.jpg",
-        "C:\\Users\\ShAllan\\Documents\\shawns site\\images\\Customers\\Customer65.jpg",
-        "C:\\Users\\ShAllan\\Documents\\shawns site\\images\\Customers\\Customer66.jpg",
-        "C:\\Users\\ShAllan\\Documents\\shawns site\\images\\Customers\\Customer67.jpg",
-        "C:\\Users\\ShAllan\\Documents\\shawns site\\images\\Customers\\Customer68.jpg",
-        "C:\\Users\\ShAllan\\Documents\\shawns site\\images\\Customers\\Customer69.jpg",
-        "C:\\Users\\ShAllan\\Documents\\shawns site\\images\\Customers\\Customer70.jpg",
-        "C:\\Users\\ShAllan\\Documents\\shawns site\\images\\Customers\\Customer71.jpg",
-        "C:\\Users\\ShAllan\\Documents\\shawns site\\images\\Customers\\Customer72.jpg",
-        "C:\\Users\\ShAllan\\Documents\\shawns site\\images\\Customers\\Customer73.jpg",
-        "C:\\Users\\ShAllan\\Documents\\shawns site\\images\\Customers\\Customer74.jpg",
-        "C:\\Users\\ShAllan\\Documents\\shawns site\\images\\Customers\\Customer75.jpg",
-        "C:\\Users\\ShAllan\\Documents\\shawns site\\images\\Customers\\Customer76.jpg",
-        "C:\\Users\\ShAllan\\Documents\\shawns site\\images\\Customers\\Customer77.jpg",
-        "C:\\Users\\ShAllan\\Documents\\shawns site\\images\\Customers\\Customer78.jpg",
-        "C:\\Users\\ShAllan\\Documents\\shawns site\\images\\Customers\\Customer79.jpg",
-        "C:\\Users\\ShAllan\\Documents\\shawns site\\images\\Customers\\Customer80.jpg",
-        "C:\\Users\\ShAllan\\Documents\\shawns site\\images\\Customers\\Customer81.jpg",
-        "C:\\Users\\ShAllan\\Documents\\shawns site\\images\\Customers\\Customer82.jpg",
-        "C:\\Users\\ShAllan\\Documents\\shawns site\\images\\Customers\\Customer83.jpg",
-        "C:\\Users\\ShAllan\\Documents\\shawns site\\images\\Customers\\Customer84.jpg",
-        "C:\\Users\\ShAllan\\Documents\\shawns site\\images\\Customers\\Customer85.jpg",
-        "C:\\Users\\ShAllan\\Documents\\shawns site\\images\\Customers\\Customer86.jpg",
-        "C:\\Users\\ShAllan\\Documents\\shawns site\\images\\Customers\\Customer87.jpg",
-        "C:\\Users\\ShAllan\\Documents\\shawns site\\images\\Customers\\Customer88.jpg"
+        "Customer1.jpg",
+        "Customer2.jpg",
+        "Customer3.jpg",
+        "Customer5.jpg",
+        "Customer6.jpg",
+        "Customer7.jpg",
+        "Customer8.jpg",
+        "Customer9.jpg",
+        "Customer10.jpg",
+        "Customer11.jpg",
+        "Customer12.jpg",
+
 
       // Add more images as needed...
     ];
