--- a/thank-you.html
+++ b/thank-you.html
@@ -14,8 +14,8 @@
     <div class="banner-content">
       <div class="logo-container">
         <a href="index.html" class="home-link">
-          <img src="images/Headshot.jpg" alt="Simple Salesman Logo" class="site-logo">
-          <h1 class="logo">The Simple Salesman</h1>
+          <img src="Headshot.jpg" alt="Simple Salesman Logo" class="site-logo">
+          <h1 class="logo">Houston Auto Pro</h1>
         </a>
       </div>
       <nav class="nav-buttons">
