--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Simple Salesman</title>
+  <title>Houston Auto Pro</title>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <link rel="stylesheet" href="style.css">
 <meta name="description" content="Simple Salesman: Stress-free car buying. Browse our Ford F-150, Mustang & preowned used vehicles. Get approved fast, trade your car, and drive home happy!">
