--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Houston Auto Pro</title>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <link rel="stylesheet" href="style.css">
-<meta name="description" content="Simple Salesman: Stress-free car buying. Browse our Ford F-150, Mustang & preowned used vehicles. Get approved fast, trade your car, and drive home happy!">
+<meta name="description" content="Houston Auto Pro: Stress-free car buying. Browse our Ford F-150, Mustang & preowned used vehicles. Get approved fast, trade your car, and drive home happy!">
 <meta name="keywords" content="car dealer, Ford trucks, Mustang, auto sales, Houston, used cars, credit approval">
 <link rel="canonical" href="https://www.simplesalesman.com" />
 </head>
