--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <div class="mission-content">
       <h2>Making Car Buying Simple</h2>
       <p>
-        At <strong>Houston Auto Pro</strong>, my goal is to make car buying simple, transparent, and stress-free. I value your trust and appreciate the opportunity to earn your business by providing honest advice, competitive pricing, and a seamless experience. Let’s find the perfect car for you—without the hassle.
+        At <strong>Houston Auto Pro</strong>, Our goal is to make car buying simple, transparent, and stress-free. We value your trust and appreciate the opportunity to earn your business by providing honest advice, competitive pricing, and a seamless experience. Let’s find the perfect car for you—without the hassle.
 
       </p>
       <a href="contact.html" class="cta-button">Get Started Today</a>
