--- a/index.html
+++ b/index.html
@@ -55,8 +55,10 @@
     <div class="mission-content">
       <h2>Making Car Buying Simple</h2>
       <p>
-        At <strong>Houston Auto Pro</strong>, Our goal is to make car buying simple, transparent, and stress-free. We value your trust and appreciate the opportunity to earn your business by providing honest advice, competitive pricing, and a seamless experience. Let’s find the perfect car for you—without the hassle.
+        At <strong>Houston Auto Pro</strong>, we believe buying a car should be <strong>easy, transparent, and hassle-free.</strong> Your trust means everything to us, which is why we’re committed to honest advice, competitive pricing, and a seamless car-buying experience. Let us help you find the perfect vehicle—without the stress.
 
+Explore Our Extensive Inventory
+We partner with a wide network of dealers, offering top brands like <strong>Ford, Nissan, Chevrolet, Mercedes, Ineos,</strong> and more.
       </p>
       <a href="contact.html" class="cta-button">Get Started Today</a>
     </div>
