--- a/index.html
+++ b/index.html
@@ -56,9 +56,8 @@
       <h2>Making Car Buying Simple</h2>
       <p>
         At <strong>Houston Auto Pro</strong>, we believe buying a car should be <strong>easy, transparent, and hassle-free.</strong> Your trust means everything to us, which is why we’re committed to honest advice, competitive pricing, and a seamless car-buying experience. Let us help you find the perfect vehicle—without the stress.
-
-Explore Our Extensive Inventory
-We partner with a wide network of dealers, offering top brands like <strong>Ford, Nissan, Chevrolet, Mercedes, Ineos,</strong> and more.
+</p>
+<p>We partner with a wide network of dealers, offering top brands like <strong>Ford, Nissan, Chevrolet, Mercedes, Ineos,</strong> and more.
       </p>
       <a href="contact.html" class="cta-button">Get Started Today</a>
     </div>
