--- a/contact.html
+++ b/contact.html
@@ -37,8 +37,13 @@
     </section>
 
     <div class="contact-container">
-      <form class="contact-form" id="contactForm">
-        <div class="form-group">
+     <form 
+  class="contact-form" 
+  action="https://script.google.com/macros/s/AKfycbwpbgFTOWDVKL1bq9r8R3ycKN1q0krF38OTBGArM5mv_3YHaAZCjGnhNMEZoTZbL3kL/exec" 
+  method="POST"
+>
+  <!-- Redirect after submission (optional) -->
+  <input type="hidden" name="redirect" value="https://yourwebsite.com/thank-you.html">
           <label for="name">Full Name*</label>
           <input type="text" id="name" name="name" required>
         </div>
