--- a/contact.html
+++ b/contact.html
@@ -36,17 +36,14 @@
       <p>Ready to find your perfect vehicle? Fill out the form below and we'll contact you within 24 hours.</p>
     </section>
 
-    <div class="contact-container">
-     <form 
-  class="contact-form" 
-  action="https://script.google.com/macros/s/AKfycbwpbgFTOWDVKL1bq9r8R3ycKN1q0krF38OTBGArM5mv_3YHaAZCjGnhNMEZoTZbL3kL/exec" 
-  method="POST"
->
- 
-          <label for="name">Full Name*</label>
-          <input type="text" id="name" name="name" required>
-        </div>
-
+<div class="contact-container">
+  <form class="contact-form" action="https://script.google.com/macros/s/AKfycbwpbgFTOWDVKL1bq9r8R3ycKN1q0krF38OTBGArM5mv_3YHaAZCjGnhNMEZoTZbL3kL/exec" method="POST" enctype="application/json">
+    <input type="hidden" name="redirect" value="https://yourwebsite.com/thank-you.html">
+    
+    <div class="form-group">
+      <label for="name">Full Name*</label>
+      <input type="text" id="name" name="name" required>
+    </div>
         <div class="form-group">
           <label for="phone">Phone Number*</label>
           <input type="tel" id="phone" name="phone" required>
