--- a/contact.html
+++ b/contact.html
@@ -37,14 +37,17 @@
     </section>
 
 <div class="contact-container">
-  <form class="contact-form" action="https://script.google.com/macros/s/AKfycbwXGOl5ARd413pDWINkh0YRp1zj9k9ogV3lc3_u9g4mAtaQwwSn92KCLPKZZEp23Awk/exec" method="POST">
-    <!-- Remove enctype="application/json" -->
-    <input type="hidden" name="redirect" value="https://yourwebsite.com/thank-you.html">
+  <form class="contact-form" action="https://script.google.com/macros/s/AKfycbxajD0QErH3k30UPD9sjmO1frkaxgDwgZqGroRhdAeczDoLWvoLjojRVQIxUvxnkjiM/exec" method="POST">
+    <input type="hidden" name="redirect" value="https://houstonautopro.com/thank-you.html">
     
     <div class="form-group">
       <label for="name">Full Name*</label>
       <input type="text" id="name" name="name" required>
     </div>
+    <!-- Your other form fields -->
+    <button type="submit" class="submit-btn">Submit Inquiry</button>
+  </form>
+</div>
         <div class="form-group">
           <label for="phone">Phone Number*</label>
           <input type="tel" id="phone" name="phone" required>
