--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,8 @@
     </section>
 
 <div class="contact-container">
-  <form class="contact-form" action="https://script.google.com/macros/s/AKfycbybxL_mJMjG2Y9mQ3NtmfUf5s7--RBLwTjqX-lAYKv_-GG_NkOXI3JhbNoFjBQzT-AA/exec" method="POST" target="_blank"  onsubmit="window.location.href='https://houstonautopro.com/thank-you.html'; return true;" > 
+  <form class="contact-form" action="https://script.google.com/macros/s/AKfycbx1kjtar3ILj9R65L19bGoeRiAa-5tzhdV-8kMEmMc/dev" 
+    method="POST" target="_blank"  onsubmit="window.location.href='https://houstonautopro.com/thank-you.html'; return true;" > 
     
     <div class="form-group">
       <label for="name">Full Name*</label>
