--- a/contact.html
+++ b/contact.html
@@ -37,8 +37,10 @@
     </section>
 
 <div class="contact-container">
-  <form class="contact-form" action="https://script.google.com/macros/s/AKfycbx1kjtar3ILj9R65L19bGoeRiAa-5tzhdV-8kMEmMc/dev" 
-    method="POST" target="_blank"  onsubmit="window.location.href='https://houstonautopro.com/thank-you.html'; return true;" > 
+<form class="contact-form" 
+      action="https://script.google.com/macros/s/AKfycbx1kjtar3ILj9R65L19bGoeRiAa-5tzhdV-8kMEmMc/dev" 
+      method="POST"
+      onsubmit="setTimeout(function(){ window.location.href='https://houstonautopro.com/thank-you.html'; }, 1000); return true;">
     
     <div class="form-group">
       <label for="name">Full Name*</label>
