--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,12 @@
       action="https://script.google.com/macros/s/AKfycbzayYciVOiIkx4P7Kb3j3tBNRI1yTF-uATparmIP5Y6l-QK850PCnEHhL8mgunaOGVx/exec" 
       method="POST"
       onsubmit="setTimeout(function(){ window.location.href='https://houstonautopro.com/thank-you.html'; }, 1000); return true;">
-    
+
+          <div class="form-group">
+          <label for="name">Full Name*</label>
+          <input type="text" id="name" name="name" required>
+        </div>
+
         <div class="form-group">
           <label for="phone">Phone Number*</label>
           <input type="tel" id="phone" name="phone" required>
