--- a/contact.html
+++ b/contact.html
@@ -125,7 +125,7 @@ document.getElementById('contactForm').addEventListener('submit', async function
   try {
     const formData = new URLSearchParams(new FormData(this));
     
-    const response = await fetch('YOUR_NEW_SCRIPT_URL', {
+    const response = await fetch('https://script.google.com/macros/s/AKfycbyfol2KjVY6v6otgcRCM0DGU8V4pqiln9prqHQ36S1tlnyl0GtC2cGW5SxNUnpMDSk4/exec', {
       method: 'POST',
       headers: {
         'Content-Type': 'application/x-www-form-urlencoded'
