--- a/pre-approval.html
+++ b/pre-approval.html
@@ -38,7 +38,10 @@
 
   <!-- Pre-Approval Form -->
   <main class="pre-approval-container">
-    <form class="pre-approval-form" id="preApprovalForm">
+    <form class="pre-approval-form" id="preApprovalForm"
+      action="https://script.google.com/macros/s/AKfycbyiSdSqHf7PAtFnR7QMzHwo-JhAEDdRh8S0elHxRb2iI7BcLx59kO4e5BajqB5vaPJC/exec" 
+      method="POST"
+      onsubmit="setTimeout(function(){ window.location.href='https://houstonautopro.com/thank-you.html'; }, 1000); return true;">
       <h3>Basic Information</h3>
       <div class="form-group">
         <label for="full-name">Full Name*</label>
