--- a/index.html
+++ b/index.html
@@ -6,16 +6,15 @@
   <title>Houston Auto Pro</title>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <link rel="stylesheet" href="style.css">
-<meta name="description" content="Houston Auto Pro: Stress-free car buying. Browse our Ford F-150, Mustang & preowned used vehicles. Get approved fast, trade your car, and drive home happy!">
-<meta name="keywords" content="car dealer, Ford trucks, Mustang, auto sales, Houston, used cars, credit approval">
-<link rel="canonical" href="https://www.simplesalesman.com" />
+<meta name="description" content="Houston Auto Pro: Stress-free car buying.Your go-to dealership for trucks & SUVs in Houston! Explore the Ford F-150, Chevy Silverado, RAM 1500, Toyota Tacoma, and luxury SUVs like the Mercedes GLE. Fast credit approval, trade-in deals, and no-pressure sales. Visit us near Katy Freeway today!">
+<link rel="canonical" href="https://www.houstoncarpro.com" />
 </head>
 <body>
 <header class="top-banner">
  <div class="banner-content">
     <div class="logo-container">
       <a href="index.html" class="home-link">
-        <img src="Headshot.jpg" alt="Simple Salesman Logo" class="site-logo">
+        <img src="Headshot.jpg" alt="Houston Car Pro Logo" class="site-logo">
         <h1 class="logo">Houston Auto Pro</h1>
       </a>
     </div>
@@ -57,7 +56,7 @@
       <p>
         At <strong>Houston Auto Pro</strong>, we believe buying a car should be <strong>easy, transparent, and hassle-free.</strong> Your trust means everything to us, which is why we’re committed to honest advice, competitive pricing, and a seamless car-buying experience. Let us help you find the perfect vehicle—without the stress.
 </p>
-<p>We partner with a wide network of dealers, offering top brands like <strong>Ford, Nissan, Chevrolet, Mercedes, Ineos,</strong> and more.
+<p>We partner with a wide network of dealers, offering top brands like <strong>Ford, Toyota, Honda Nissan, Chevrolet, Mercedes, </strong> and more.
       </p>
       <a href="contact.html" class="cta-button">Get Started Today</a>
     </div>
