--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <link rel="stylesheet" href="style.css">
 <meta name="description" content="Houston Auto Pro: Stress-free car buying.Your go-to dealership network for new and used cars, trucks & SUVs in Houston! Explore the Ford F-150, Chevy Silverado, RAM 1500, Toyota Tacoma, and luxury SUVs like the Mercedes GLE. Fast credit approval, trade-in deals, and no-pressure sales.">
-<link rel="canonical" href="https://www.houstoncarpro.com" />
+<link rel="canonical" href="https://www.houstonautopro.com" />
 </head>
 <body>
 <header class="top-banner">
