--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       <div class="social-links">
         <a href="#" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
         <a href="https://www.instagram.com/HoustonAutoPro" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-        <a href="#" aria-label="Youtube"><i class="fab fa-Youtube"></i></a>
+        <a href="https://www.youtube.com/@HoustonAutoPro" aria-label="YouTube"><i class="fab fa-youtube"></i></a>
         <a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
       </div>
     </div>
