--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <div class="social-media">
       <h3>Follow Us</h3>
       <div class="social-links">
-        <a href="#" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+        <a href="https://www.facebook.com/TheHoustonAutoPro/" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
         <a href="https://www.instagram.com/HoustonAutoPro" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
         <a href="https://www.youtube.com/@HoustonAutoPro" aria-label="YouTube"><i class="fab fa-youtube"></i></a>
         <a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
