--- a/inventory.html
+++ b/inventory.html
@@ -80,11 +80,11 @@
       </div>
       <div class="social-media">
         <h3>Follow Us</h3>
-        <div class="social-links">
-          <a href="#" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
-          <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-          <a href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
-          <a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+      <div class="social-links">
+        <a href="https://www.facebook.com/TheHoustonAutoPro/" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+        <a href="https://www.instagram.com/HoustonAutoPro" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+        <a href="https://www.youtube.com/@HoustonAutoPro" aria-label="YouTube"><i class="fab fa-youtube"></i></a>
+      </div>
         </div>
       </div>
     </div>
