--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
  <div class="banner-content">
     <div class="logo-container">
       <a href="index.html" class="home-link">
-        <img src="logo.jpeg" alt="Houston Car Pro Logo" class="site-logo">
+        <img src="Logo.jpeg" alt="Houston Car Pro Logo" class="site-logo">
         <h1 class="logo">Houston Auto Pro</h1>
       </a>
     </div>
