--- a/inventory.html
+++ b/inventory.html
@@ -14,7 +14,7 @@
     <div class="banner-content">
       <div class="logo-container">
         <a href="index.html" class="home-link">
-          <img src="Headshot.jpg" alt="Simple Salesman Logo" class="site-logo">
+        <img src="HAPLogo.jpeg" alt="Houston Car Pro Logo" class="site-logo">
           <h1 class="logo">Houston Auto Pro</h1>
         </a>
       </div>
