--- a/trade.html
+++ b/trade.html
@@ -19,7 +19,7 @@
     <nav class="nav-buttons">
       <a href="inventory.html" class="nav-button">Inventory</a>
       <a href="pre-approval.html" class="nav-button highlight-button">Pre-Approval</a>
-      <a href="trade.html" class="nav-button">Trade</a>
+      <a href="trade.html" class="nav-button active">Trade</a>
       <a href="happy-customers.html" class="nav-button">Happy Customers</a>
       <a href="contact.html" class="nav-button">Contact Us</a>
 
