--- a/inventory.html
+++ b/inventory.html
@@ -19,7 +19,7 @@
         </a>
       </div>
       <nav class="nav-buttons">
-        <a href="inventory.html" class="nav-button active">Inventory</a>
+        <a href="inventory.html" class="nav-button">Inventory</a>
         <a href="pre-approval.html" class="nav-button highlight-button">Pre-Approval</a>
         <a href="trade.html" class="nav-button">Trade</a>
         <a href="happy-customers.html" class="nav-button">Happy Customers</a>
