--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
       <a href="pre-approval.html" class="nav-button highlight-button">Pre-Approval</a>
       <a href="trade.html" class="nav-button">Trade</a>
       <a href="happy-customers.html" class="nav-button">Happy Customers</a>
-      <a href="contact.html" class="nav-button">Contact Us</a>
+      <a href="contact.html" class="nav-button active">Contact Us</a>
       </nav>
     </div>
   </header>
