--- a/Sell.html
+++ b/Sell.html
@@ -22,9 +22,10 @@
         <a href="inventory.html" class="nav-button">Inventory</a>
         <a href="pre-approval.html" class="nav-button">Pre-Approval</a>
         <a href="trade.html" class="nav-button">Trade</a>
-        <a href="sell-your-car.html" class="nav-button active">Sell Your Car</a>
+        <a href="sell.html" class="nav-button active">Sell Your Car</a>
         <a href="happy-customers.html" class="nav-button">Happy Customers</a>
         <a href="contact.html" class="nav-button">Contact Us</a>
+        
       </nav>
     </div>
   </header>
