--- a/happy-customers.html
+++ b/happy-customers.html
@@ -22,6 +22,7 @@
         <a href="inventory.html" class="nav-button">Inventory</a>
         <a href="pre-approval.html" class="nav-button highlight-button">Pre-Approval</a>
         <a href="trade.html" class="nav-button">Trade</a>
+        <a href="sell.html" class="nav-button">Sell Your Car</a>
         <a href="happy-customers.html" class="nav-button active">Happy Customers</a>
         <a href="contact.html" class="nav-button">Contact Us</a>
       </nav>
