--- a/sell.html
+++ b/sell.html
@@ -122,7 +122,11 @@
                 <option value="fair">Fair - Some issues</option>
                 <option value="poor">Poor - Needs work</option>
               </select>
+            </div> <div class="form-group">
+              <label for="mileage">Vin Number*</label>
+              <input type="text" id="vin" name="vin" required>
             </div>
+            
             
             <div class="form-group full-width">
               <label for="notes">Additional Notes</label>
