--- a/sell.html
+++ b/sell.html
@@ -99,7 +99,7 @@
               </select>
             </div>
             <div class="form-group">
-              <label for="vin">VIN</label>
+              <label for="vin">VIN*</label>
               <input type="text" id="vin" name="vin" required>
             </div>
           </div>
