--- a/index.html
+++ b/index.html
@@ -4,87 +4,92 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Houston Auto Pro</title>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <link rel="stylesheet" href="style.css">
-<meta name="description" content="Houston Auto Pro: Stress-free car buying.Your go-to dealership network for new and used cars, trucks & SUVs in Houston! Explore the Ford F-150, Chevy Silverado, RAM 1500, Toyota Tacoma, and luxury SUVs like the Mercedes GLE. Fast credit approval, trade-in deals, and no-pressure sales.">
-<link rel="canonical" href="https://www.houstonautopro.com" />
+  <meta name="description" content="Houston Auto Pro: Stress-free car buying.Your go-to dealership network for new and used cars, trucks & SUVs in Houston! Explore the Ford F-150, Chevy Silverado, RAM 1500, Toyota Tacoma, and luxury SUVs like the Mercedes GLE. Fast credit approval, trade-in deals, and no-pressure sales.">
+  <link rel="canonical" href="https://www.houstonautopro.com" />
 </head>
 <body>
-<header class="top-banner">
- <div class="banner-content">
-    <div class="logo-container">
-      <a href="index.html" class="home-link">
-        <img src="HAPLogo.jpeg" alt="Houston Car Pro Logo" class="site-logo">
-        <h1 class="logo">Houston Auto Pro</h1>
-      </a>
-    </div>
-    <nav class="nav-buttons">
-      <a href="inventory.html" class="nav-button">Inventory</a>
-      <a href="pre-approval.html" class="nav-button highlight-button">Pre-Approval</a>
-      <a href="trade.html" class="nav-button">Trade</a>
-      <a href="sell.html" class="nav-button">Sell Your Car</a>
-      <a href="happy-customers.html" class="nav-button">Happy Customers</a>
-      <a href="contact.html" class="nav-button">Contact Us</a>
-
+  <header class="top-banner">
+    <div class="banner-content">
+      <div class="logo-container">
+        <a href="index.html" class="home-link">
+          <img src="HAPLogo.jpeg" alt="Houston Car Pro Logo" class="site-logo">
+          <h1 class="logo">Houston Auto Pro</h1>
+        </a>
+      </div>
+      <nav class="nav-buttons">
+        <a href="inventory.html" class="nav-button">Inventory</a>
+        <a href="pre-approval.html" class="nav-button highlight-button">Pre-Approval</a>
+        <a href="trade.html" class="nav-button">Trade</a>
+        <a href="sell.html" class="nav-button">Sell Your Car</a>
+        <a href="happy-customers.html" class="nav-button">Happy Customers</a>
+        <a href="contact.html" class="nav-button">Contact Us</a>
+      </nav>
     </div>
   </header>
-</body>
 
-<main>
-  <!-- Vehicle Gallery Section -->
-  <section class="vehicle-gallery">
-    <h2>Featured Vehicles</h2>
-    <div class="gallery-grid">
-      <div class="gallery-item">
-        <img src="F150Raptor.jpg" alt="Ford F-150" class="vehicle-img">
-        <p class="vehicle-caption">Ford F-150</p>
+  <main>
+    <!-- YouTube Videos Section -->
+    <section class="video-gallery">
+      <h2>Featured Videos</h2>
+      <div class="video-grid">
+        <div class="video-container">
+          <iframe width="100%" height="315" src="https://www.youtube.com/embed/zyzCiNn3RtM?si=vCO1B-VI_81W_fEB" 
+                  title="YouTube video player" frameborder="0" 
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                  referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
+        <div class="video-container">
+          <iframe width="100%" height="315" src="https://youtube.com/shorts/XYC_9_xqtmg?si=F7rgxvCp-TosOIvL" 
+                  title="YouTube video player" frameborder="0" 
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                  referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
+        <div class="video-container">
+          <iframe width="100%" height="315" src="https://www.youtube.com/embed/EXAMPLE_VIDEO_ID_3" 
+                  title="YouTube video player" frameborder="0" 
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                  referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
       </div>
-      <div class="gallery-item">
-        <img src="MustangDarkhorse.avif" alt="Ford Mustang" class="vehicle-img mustang-img">
-        <p class="vehicle-caption">Ford Mustang</p>
-      </div>
-      <div class="gallery-item">
-        <img src="FordExplorer.png" alt="Ford Explorer" class="vehicle-img">
-        <p class="vehicle-caption">Ford Explorer</p>
-      </div>
-    </div>
-  </section>
+    </section>
 
-  <!-- Mission Statement Section -->
-  <section class="mission-statement">
-    <div class="mission-content">
-      <h2>Making Car Buying Simple</h2>
-      <p>
-        At <strong>Houston Auto Pro</strong>, we believe buying a car should be <strong>easy, transparent, and hassle-free.</strong> Your trust means everything to us, which is why we’re committed to honest advice, competitive pricing, and a seamless car-buying experience. Let us help you find the perfect vehicle—without the stress.
-</p>
-<p>We partner with a wide network of dealers, offering top brands like <strong>Ford, Toyota, Honda, Nissan, Chevrolet, Mercedes, </strong> and more.
-      </p>
-      <a href="contact.html" class="cta-button">Get Started Today</a>
-    </div>
-  </section>
-</main>
+    <!-- Mission Statement Section -->
+    <section class="mission-statement">
+      <div class="mission-content">
+        <h2>Making Car Buying Simple</h2>
+        <p>
+          At <strong>Houston Auto Pro</strong>, we believe buying a car should be <strong>easy, transparent, and hassle-free.</strong> Your trust means everything to us, which is why we're committed to honest advice, competitive pricing, and a seamless car-buying experience. Let us help you find the perfect vehicle—without the stress.
+        </p>
+        <p>We partner with a wide network of dealers, offering top brands like <strong>Ford, Toyota, Honda, Nissan, Chevrolet, Mercedes, </strong> and more.
+        </p>
+        <a href="contact.html" class="cta-button">Get Started Today</a>
+      </div>
+    </section>
+  </main>
 
-<footer class="bottom-banner">
-  <div class="footer-content">
-    <div class="contact-info">
-      <h3>How to Reach Me</h3>
-      <p><i class="fas fa-phone"></i> (832) 708-4243</p>
-      <p><i class="fas fa-envelope"></i> Allan.t.Shawn@gmail.com</p>
-      <p><i class="fas fa-map-marker-alt"></i>Address: 10333 Katy Fwy, Houston, TX 77024</p>
-    </div>
-    <div class="social-media">
-      <h3>Follow Us</h3>
-      <div class="social-links">
-        <a href="https://www.facebook.com/TheHoustonAutoPro/" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
-        <a href="https://www.instagram.com/HoustonAutoPro" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-        <a href="https://www.youtube.com/@HoustonAutoPro" aria-label="YouTube"><i class="fab fa-youtube"></i></a>
+  <footer class="bottom-banner">
+    <div class="footer-content">
+      <div class="contact-info">
+        <h3>How to Reach Me</h3>
+        <p><i class="fas fa-phone"></i> (832) 708-4243</p>
+        <p><i class="fas fa-envelope"></i> Allan.t.Shawn@gmail.com</p>
+        <p><i class="fas fa-map-marker-alt"></i>Address: 10333 Katy Fwy, Houston, TX 77024</p>
+      </div>
+      <div class="social-media">
+        <h3>Follow Us</h3>
+        <div class="social-links">
+          <a href="https://www.facebook.com/TheHoustonAutoPro/" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+          <a href="https://www.instagram.com/HoustonAutoPro" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+          <a href="https://www.youtube.com/@HoustonAutoPro" aria-label="YouTube"><i class="fab fa-youtube"></i></a>
+        </div>
       </div>
     </div>
-  </div>
-  <div class="copyright">
-    <p>&copy; 2023 Simple Salesman. All rights reserved.</p>
-  </div>
-</footer>
+    <div class="copyright">
+      <p>&copy; 2023 Simple Salesman. All rights reserved.</p>
+    </div>
+  </footer>
 
   <script>
     // Simple form handler (would connect to your CRM in production)
@@ -95,4 +100,4 @@
     });
   </script>
 </body>
-</html>"
+</html>
