--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                   referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
         <div class="video-container">
-          <iframe width="100%" height="315" src="https://youtube.com/shorts/XYC_9_xqtmg?si=F7rgxvCp-TosOIvL" 
+          <iframe width="100%" height="315" src="https://youtube.com/shorts/XYC_9_xqtmg?si=1u4usF8ceIDvNRbw" 
                   title="YouTube video player" frameborder="0" 
                   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
                   referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
