--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
                   referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
         <div class="video-container">
-          <iframe width="100%" height="315" src="https://youtube.com/shorts/XYC_9_xqtmg?si=1u4usF8ceIDvNRbw" 
+          <iframe width="100%" height="315" src="https://youtube.com/embed/XYC_9_xqtmg?si=1u4usF8ceIDvNRbw" 
                   title="YouTube video player" frameborder="0" 
                   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
                   referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
         <div class="video-container">
-          <iframe width="100%" height="315" src="https://www.instagram.com/reel/DICiYTdPpDy/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA==" 
+          <iframe width="100%" height="315" src="https://www.instagram.com/embed/DICiYTdPpDy/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA==" 
                   title="YouTube video player" frameborder="0" 
                   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
                   referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
