--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                   referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
         <div class="video-container">
-          <iframe width="100%" height="315" src="https://www.instagram.com/embed/DICiYTdPpDy/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA==" 
+          <iframe width="100%" height="315" src="https://youtube.com/embed/9cv7DNU1TvU" 
                   title="YouTube video player" frameborder="0" 
                   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
                   referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
