--- a/sell.html
+++ b/sell.html
@@ -137,8 +137,8 @@
           </div>
           <div class="benefit-card">
             <i class="fas fa-coins"></i>
-            <h3>Cash Payment</h3>
-            <p>Get paid on the spot.</p>
+            <h3>Fast Payment</h3>
+            <p>Get paid the same day.</p>
           </div>
         </div>
       </div>
