--- a/index.html
+++ b/index.html
@@ -42,19 +42,25 @@
           <iframe width="100%" height="315" src="https://www.youtube.com/embed/zyzCiNn3RtM?si=vCO1B-VI_81W_fEB" 
                   title="YouTube video player" frameborder="0" 
                   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-                  referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                  referrerpolicy="strict-origin-when-cross-origin"
+                  sandbox="allow-same-origin allow-scripts allow-popups"
+                  allowfullscreen></iframe>
         </div>
         <div class="video-container">
           <iframe width="100%" height="315" src="https://youtube.com/embed/XYC_9_xqtmg?si=1u4usF8ceIDvNRbw" 
                   title="YouTube video player" frameborder="0" 
                   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-                  referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                  referrerpolicy="strict-origin-when-cross-origin"
+                  sandbox="allow-same-origin allow-scripts allow-popups"
+                  allowfullscreen></iframe>
         </div>
         <div class="video-container">
           <iframe width="100%" height="315" src="https://youtube.com/embed/9cv7DNU1TvU" 
                   title="YouTube video player" frameborder="0" 
                   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-                  referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                  referrerpolicy="strict-origin-when-cross-origin"
+                  sandbox="allow-same-origin allow-scripts allow-popups"
+                  allowfullscreen></iframe>
         </div>
       </div>
     </section>
