--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                   allowfullscreen></iframe>
         </div>
         <div class="video-container">
-          <iframe width="100%" height="315" src="https://youtube.com/embed/XYC_9_xqtmg?si=1u4usF8ceIDvNRbw" 
+          <iframe width="100%" height="315" src="https://www.youtube.com/embed/XYC_9_xqtmg?si=1u4usF8ceIDvNRbw" 
                   title="YouTube video player" frameborder="0" 
                   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
                   referrerpolicy="strict-origin-when-cross-origin"
@@ -55,7 +55,7 @@
                   allowfullscreen></iframe>
         </div>
         <div class="video-container">
-          <iframe width="100%" height="315" src="https://youtube.com/embed/9cv7DNU1TvU" 
+          <iframe width="100%" height="315" src="https://www.youtube.com/embed/9cv7DNU1TvU" 
                   title="YouTube video player" frameborder="0" 
                   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
                   referrerpolicy="strict-origin-when-cross-origin"
