--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <main>
     <!-- YouTube Videos Section -->
     <section class="video-gallery">
-      <h2>Featured Videos</h2>
+      <h2>Hottest on the Lot</h2>
       <div class="video-grid">
         <div class="video-container">
           <iframe width="100%" height="315" src="https://www.youtube.com/embed/zyzCiNn3RtM?si=vCO1B-VI_81W_fEB" 
