--- a/sell.html
+++ b/sell.html
@@ -3,10 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sell Your Car | Houston Auto Pro</title>
+  <title>Houston Auto Pro</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <link rel="stylesheet" href="style.css">
-  <meta name="description" content="Get the best value for your car when you sell to Houston Auto Pro. Fast, fair offers and hassle-free process.">
+  <meta name="description" content="Houston Auto Pro: Stress-free car buying.Your go-to dealership network for new and used cars, trucks & SUVs in Houston! Explore the Ford F-150, Chevy Silverado, RAM 1500, Toyota Tacoma, and luxury SUVs like the Mercedes GLE. Fast credit approval, trade-in deals, and no-pressure sales.">
+  <link rel="canonical" href="https://www.houstonautopro.com" />
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self' https:; img-src 'self' data: https:; script-src 'self' 'unsafe-inline' https:; style-src 'self' 'unsafe-inline' https://cdnjs.cloudflare.com; frame-src https://www.youtube.com;">
+<meta http-equiv="X-Content-Type-Options" content="nosniff">
+<meta http-equiv="X-Frame-Options" content="SAMEORIGIN">
+<meta http-equiv="Referrer-Policy" content="strict-origin-when-cross-origin">
 </head>
 <body>
   <!-- Same header as other pages -->
