--- a/pre-approval.html
+++ b/pre-approval.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Houston Auto Pro</title>
+  <title>Pre Approval | Houston Auto Pro</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <link rel="stylesheet" href="style.css">
   <meta name="description" content="Houston Auto Pro: Stress-free car buying.Your go-to dealership network for new and used cars, trucks & SUVs in Houston! Explore the Ford F-150, Chevy Silverado, RAM 1500, Toyota Tacoma, and luxury SUVs like the Mercedes GLE. Fast credit approval, trade-in deals, and no-pressure sales.">
