--- a/sell.html
+++ b/sell.html
@@ -171,8 +171,7 @@
     <div class="copyright">
       <p>&copy; 2023 Simple Salesman. All rights reserved.</p>
     </div>
-  </footer>
-  <script>
+<script>
   document.querySelector('.trade-form').addEventListener('submit', function(e) {
     e.preventDefault();
     
@@ -200,28 +199,17 @@
     })
     .then(data => {
       if (data.status === 'success') {
-        // Success message
-        form.innerHTML = `
-          <div class="success-message">
-            <h3>Thank You!</h3>
-            <p>Your submission has been received. We'll contact you shortly with your offer.</p>
-            <p><i class="fas fa-check-circle"></i></p>
-          </div>
-        `;
+        // Redirect to thank you page
+        window.location.href = 'https://houstonautopro.com/thank-you.html';
       } else {
         throw new Error(data.message || 'Unknown error occurred');
       }
     })
     .catch(error => {
-      // Error message
-      form.innerHTML = `
-        <div class="error-message">
-          <h3>Submission Error</h3>
-          <p>${error.message}</p>
-          <p>Please try again or contact us directly.</p>
-          <button onclick="window.location.reload()">Try Again</button>
-        </div>
-      `;
+      // Show error message without redirecting
+      submitBtn.disabled = false;
+      submitBtn.textContent = 'Get My Instant Offer';
+      alert('Submission failed: ' + error.message + '\nPlease try again or contact us directly.');
     });
   });
 </script>
