--- a/contact.html
+++ b/contact.html
@@ -4,10 +4,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Contact Us | Houston Auto Pro</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-  <link rel="stylesheet" href="style.css">
-  <meta name="description" content="Houston Auto Pro: Stress-free car buying.Your go-to dealership network for new and used cars, trucks & SUVs in Houston! Explore the Ford F-150, Chevy Silverado, RAM 1500, Toyota Tacoma, and luxury SUVs like the Mercedes GLE. Fast credit approval, trade-in deals, and no-pressure sales.">
-  <link rel="canonical" href="https://www.houstonautopro.com" />
+ <meta name="description" content="Houston Auto Pro: Stress-free car buying. Contact us for new & used cars, trucks, and SUVs in Houston. Fast credit approval, trade-in deals, and no-pressure sales.">
+  <link rel="canonical" href="https://www.houstonautopro.com/contact.html" />
+
+  <!-- Open Graph / Facebook Meta Tags (Controls Facebook Sharing) -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://www.houstonautopro.com/contact.html">
+  <meta property="og:title" content="Contact Us | Houston Auto Pro">
+  <meta property="og:description" content="Get in touch with Houston Auto Pro for the best car deals in Houston. Fast responses, no-pressure sales.">
+  <meta property="og:image" content="https://www.houstonautopro.com/HAPLogo.jpeg">
   <meta http-equiv="Content-Security-Policy" content="default-src 'self' https:; img-src 'self' data: https:; script-src 'self' 'unsafe-inline' https:; style-src 'self' 'unsafe-inline' https://cdnjs.cloudflare.com; frame-src https://www.youtube.com;">
 <meta http-equiv="X-Content-Type-Options" content="nosniff">
 <meta http-equiv="X-Frame-Options" content="SAMEORIGIN">
