--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,8 @@
   <title>Contact Us | Houston Auto Pro</title>
  <meta name="description" content="Houston Auto Pro: Stress-free car buying. Contact us for new & used cars, trucks, and SUVs in Houston. Fast credit approval, trade-in deals, and no-pressure sales.">
   <link rel="canonical" href="https://www.houstonautopro.com/contact.html" />
-
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+<link rel="stylesheet" href="style.css">
   <!-- Open Graph / Facebook Meta Tags (Controls Facebook Sharing) -->
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://www.houstonautopro.com/contact.html">
