--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <h2>Hot Lot Highlights</h2>
       <div class="video-grid">
         <div class="video-container">
-          <iframe width="100%" height="315" src="https://youtube.com/embed/uoTLAuH7pbk?si=obtkqbgddBuyag-C" 
+          <iframe width="100%" height="315" src="https://www.youtube.com/embed/uoTLAuH7pbk" 
                   title="YouTube video player" frameborder="0" 
                   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
                   referrerpolicy="strict-origin-when-cross-origin"
@@ -110,4 +110,5 @@
   </script>
 </body>
 </html>
+
 
